# CMakeLearn

CMakeDemo1/: CMakelists.txt  build32.bat  build64.bat  main.cpp
CMakeDemo1/Build32/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeDemo1.sln  Demo1.vcxproj  Demo1.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
CMakeDemo1/Build32/Demo1.dir/Debug/Demo1.tlog/: CL.command.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CMakeDemo1/Build32/Demo1.dir/Release/Demo1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CMakeDemo1/Build32/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate
CMakeDemo1/Build32/Win32/Release/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
CMakeDemo1/Build64/: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeDemo1.sln  Demo1.vcxproj  Demo1.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
CMakeDemo1/Build64/Demo1.dir/Debug/Demo1.tlog/: CL.command.1.tlog  CL.write.1.tlog  Demo1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CMakeDemo1/Build64/Demo1.dir/Release/Demo1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Demo1.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CMakeDemo1/Build64/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog
CMakeDemo1/Build64/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.read.1.tlog  custombuild.write.1.tlog
CMakeDemo1/doc/: CMakeLearn1.md
CMakeDemo2/: Build32.bat  Build64.bat
CMakeDemo2/SRC/: CMakeLists.txt
CMakeDemo2/SRC/addStatic/: Add.cpp  Add.h  CMakeLists.txt
CMakeDemo2/SRC/divClassShared/: CMakeLists.txt  divClass.cpp  divClass.h
CMakeDemo2/SRC/main/: CMakeLists.txt  main.cpp
CMakeDemo2/SRC/mulClassStatic/: CMakeLists.txt  mulClass.cpp  mulClass.h
CMakeDemo2/SRC/subShared/: CMakeLists.txt  Sub.cpp  Sub.h
CMakeDemo2/doc/: CMakeDemo2.md
CMakeDemo3/: Build32.bat  Build64.bat
CMakeDemo3/CMakeMFC1/: CMakeLists.txt
CMakeDemo3/CMakeMFC1/CMakeMFC1/: CMakeLists.txt  CMakeMFC1.cpp  CMakeMFC1.h  CMakeMFC1.rc  CMakeMFC1Dlg.cpp  CMakeMFC1Dlg.h  Resource.h  stdafx.cpp  stdafx.h
CMakeDemo3/CMakeMFC1/CMakeMFC1/res/: CMakeMFC1.rc2
CMakeDemo3/doc/: CMake和MSBuild学习3.md
