cmake_minimum_required(VERSION 3.0)
project(Main)
SET(SOURCE_FILE main.cpp)
include_directories(../AddStatic/)
include_directories(../subShared)
include_directories(../mulClassStatic)
include_directories(../divClassShared)
link_libraries(addStatic)
link_libraries(subShared)
link_libraries(mulClassStatic)
link_libraries(divShared)

if(CMAKE_CL_64)
    set(CMAKE_DEBUG_POSTFIX "_64d")    
    set(CMAKE_RELEASE_POSTFIX "_64r")
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${PROJECT_SOURCE_DIR}/../../bin/Release64)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${PROJECT_SOURCE_DIR}/../../bin/Debug64)
else(CMAKE_CL_64)
    set(CMAKE_DEBUG_POSTFIX "_32d")    
    set(CMAKE_RELEASE_POSTFIX "_32r")
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${PROJECT_SOURCE_DIR}/../../bin/Release32)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${PROJECT_SOURCE_DIR}/../../bin/Debug32)
endif()
add_executable(Main ${SOURCE_FILE}) 
